list,form and table

--- a/index.html
+++ b/index.html
@@ -11,5 +11,39 @@
   <iframe width="560" height="315" src="https://www.youtube.com/embed/SHZ4XG6to_k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <script src="home.js"></script>
 
+  <ol>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+  </ol>
+
+  <ul>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+    <ul>
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+    </ul>
+  </ul>
+
+  <table>
+    <tr>
+    <th>ID</th>
+    <th>name</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>2</td>
+  </tr>
+  </table>
+<form>
+  <input type="text" />
+  <input type="submit" value="submit"/>
+</form>
+
+
+
 </body>
 </html>
