--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
 </form>
 
 
+<script>
+  let students = `[
+  {
+    "name" : "Pooja Paul",
+    "age" : 30
+  },
+  {
+    "name" : "Pooja",
+    "age" : 20
+  }
+]`
 
+console.log(JSON.parse(students)[0].age)
+</script>
 </body>
 </html>
