Guess Number Game

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
 </head>
 <body>
   <h1 id="age"></h1>
   <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/SHZ4XG6to_k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
   <script src="home.js"></script>
+ 
+ 
 
-  <ol>
+
+  <!-- <ol>
     <li>one</li>
     <li>two</li>
     <li>three</li>
@@ -41,22 +45,23 @@
 <form>
   <input type="text" />
   <input type="submit" value="submit"/>
-</form>
+</form> -->
 
 
 <script>
-  let students = `[
-  {
-    "name" : "Pooja Paul",
-    "age" : 30
-  },
-  {
-    "name" : "Pooja",
-    "age" : 20
-  }
-]`
 
-console.log(JSON.parse(students)[0].age)
+//   let students = `[
+//   {
+//     "name" : "Pooja Paul",
+//     "age" : 30
+//   },
+//   {
+//     "name" : "Pooja",
+//     "age" : 20
+//   }
+// ]`
+
+// console.log(JSON.parse(students)[0].age)
 </script>
 </body>
 </html>
