--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -4,10 +4,98 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Remote Job Portal</title>
+  <title>Remote Job Portal | jobport.com</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container"></div>
+  <nav id="navbar">
+    <div id="logo">
+      <img src="images/logo12.jpg" alt="Phoenix logo" />
+    </div>
+    <ul>
+      <li class="item"><a href="#">Home</a></li>
+      <li class="item"><a href="#">About Us</a></li>
+      <li class="item"><a href="#">Job Seekers</a></li>
+      <li class="item"><a href="#">Employers</a></li>
+      <li class="item"><a href="#">Help Center</a></li>
+    </ul>
+  </nav>
+  <section id="home">
+    <h1 class="head-primary">Let's Work Remotely</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio asperiores labore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur </p>
+    <button class="btn">Post a Job</button>
+  </section>
+  <section id="jobs-container">
+    <h1 class="head-primary">Programming Jobs</h1>
+    <div id="jobs">
+      <img src="images/logo.jpg" alt=""/>
+      <div class="job-box">
+        <h2 class="head-secondary">Title</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+      </div>
+    </div>
+    <div id="jobs">
+      <img src="images/logo1.jpg" alt=""/>
+      <div class="job-box">
+        <h2 class="head-secondary">Title</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+      </div>
+    </div>
+    <div id="jobs">
+      <img src="images/logo13.jpg" alt=""/>
+      <div class="job-box">
+        <h2 class="head-secondary">Title</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+      </div>
+    </div>
+  </section>
+  <section id="our-work">
+    <h1 class="head-primary">Our Work</h1>
+    <div id="projects">
+      <div class="project-item">
+        <img src="images/Screenshot (2).png" alt="" />
+      </div>
+      <div class="project-item">
+        <img src="images/Screenshot (5).png" alt="" />
+      </div>
+      <div class="project-item">
+        <img src="images/Screenshot (1).png" alt="" />
+      </div>
+    </div>
+  </section>
+  <section id="contact">
+    <h1 class="head-primary">Contact Us</h1>
+    <div id="contact-box">
+      <form action="">
+        <div class="form-group">
+          <label for="name">Your Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter Your Name">
+        </div>
+        <div class="form-group">
+          <label for="email">Your Email</label>
+          <input type="email" name="email" id="email" placeholder="Enter Your Email">
+        </div>
+        <div class="form-group">
+          <label for="phone">Your Phone</label>
+          <input type="phone" name="phone" id="phone" placeholder="Enter Your Phone Number">
+        </div>
+        <div class="form-group">
+          <label for="message">Message </label>
+          <textarea type="text" name="message" id="message" placeholder="Message"></textarea>
+        </div>
+        <button>Submit</button>
+        
+      </form>
+    </div>
+  </section>
+  <footer>
+    <div>
+      Copyright &copy; Phoenix Remote Online Jobs
+    </div>
+  </footer>
 </body>
 </html>
