--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Remote Job Portal | jobport.com</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 970px)" href="css/responsive.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
@@ -35,21 +37,21 @@
       <img src="images/logo.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perferendis ratione eligendi sit alias, temporibus, laborum architecto suscipit doloribus unde quam repellat. Temporibus debitis quia dolor voluptates accusamus vel beatae ex. Voluptatibus, ipsum nulla?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
       </div>
     </div>
     <div id="jobs">
       <img src="images/logo1.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perferendis ratione eligendi sit alias, temporibus, laborum architecto suscipit doloribus unde quam repellat. Temporibus debitis quia dolor voluptates accusamus vel beatae ex. Voluptatibus, ipsum nulla?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
       </div>
     </div>
     <div id="jobs">
       <img src="images/logo13.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perferendis ratione eligendi sit alias, temporibus, laborum architecto suscipit doloribus unde quam repellat. Temporibus debitis quia dolor voluptates accusamus vel beatae ex. Voluptatibus, ipsum nulla?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
       </div>
     </div>
   </section>
@@ -57,7 +59,8 @@
     <h1 class="head-primary">Our Work</h1>
     <div id="projects">
       <div class="project-item">
-        <img src="images/Screenshot (2).png" alt="" />
+          <img src="images/Screenshot (2).png" alt="" />
+        </a>
       </div>
       <div class="project-item">
         <img src="images/Screenshot (5).png" alt="" />
@@ -65,6 +68,12 @@
       <div class="project-item">
         <img src="images/Screenshot (1).png" alt="" />
       </div>
+      <div class="project-item">
+        <img src="images/Screenshot (5).png" alt="" />
+      </div>
+      <!-- <div class="project-item">
+        <img src="images/Screenshot (5).png" alt="" />
+      </div> -->
     </div>
   </section>
   <section id="contact">
@@ -87,7 +96,7 @@
           <label for="message">Message </label>
           <textarea type="text" name="message" id="message" placeholder="Message"></textarea>
         </div>
-        <button>Submit</button>
+        <button class="btn">Submit</button>
         
       </form>
     </div>
