--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -15,14 +15,18 @@
 <body>
   <nav id="navbar">
     <div id="logo">
-      <img src="images/logo12.jpg" alt="Phoenix logo" />
+      <a href="#">
+        <img src="images/logo12.jpg" alt="Phoenix logo" />
+
+      </a>
+      
     </div>
     <ul>
       <li class="item"><a href="#">Home</a></li>
       <li class="item"><a href="#">About Us</a></li>
-      <li class="item"><a href="#">Job Seekers</a></li>
+      <li class="item"><a href="#jobs-container">Job Seekers</a></li>
       <li class="item"><a href="#">Employers</a></li>
-      <li class="item"><a href="#">Help Center</a></li>
+      <li class="item"><a href="#contact-box">Help Center</a></li>
     </ul>
   </nav>
   <section id="home">
@@ -33,21 +37,21 @@
   </section>
   <section id="jobs-container">
     <h1 class="head-primary">Programming Jobs</h1>
-    <div id="jobs">
+    <div class="jobs">
       <img src="images/logo.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perferendis ratione eligendi sit alias, temporibus, laborum architecto suscipit doloribus unde quam repellat. Temporibus debitis quia dolor voluptates accusamus vel beatae ex. Voluptatibus, ipsum nulla?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
       </div>
     </div>
-    <div id="jobs">
+    <div class="jobs">
       <img src="images/logo1.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus perferendis ratione eligendi sit alias, temporibus, laborum architecto suscipit doloribus unde quam repellat. Temporibus debitis quia dolor voluptates accusamus vel beatae ex. Voluptatibus, ipsum nulla?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit reprehenderit optio aliquam!</p>
       </div>
     </div>
-    <div id="jobs">
+    <div class="jobs">
       <img src="images/logo13.jpg" alt=""/>
       <div class="job-box">
         <h2 class="head-secondary">Title</h2>
